--- a/api/sam.team.yaml
+++ b/api/sam.team.yaml
@@ -2,13 +2,13 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
 Description: 'Foci 2020 Team Api'
 Parameters: 
-  FociLambdaRoleArn:
+  LambdaRoleArn:
     Type: String
-  FociTableName:
+  Database:
     Type: String
-  FociDeleteTeamTopic:
+  DeleteTeamTopic:
     Type: String
-  FociUpdateTeamTopic:
+  UpdateTeamTopic:
     Type: String
   Env:
     Type: String
@@ -17,10 +17,10 @@ Globals:
   Function:
     Environment:
       Variables:
-        DYNAMO_TABLE: !Ref FociTableName
+        DYNAMO_TABLE: !Ref Database
 
 Resources:
-  FociTeamApi:
+  TeamApi:
     Type: AWS::Serverless::Api
     Properties:
       Name: !Sub Foci2020-${Env}-Team
@@ -39,7 +39,7 @@ Resources:
       CodeUri: ./dist/create-team
       Handler: index.default
       Runtime: nodejs10.x
-      Role: !Ref FociLambdaRoleArn
+      Role: !Ref LambdaRoleArn
       Timeout: 10
       MemorySize: 128
       Tracing: Active
@@ -47,7 +47,7 @@ Resources:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref FociTeamApi
+            RestApiId: !Ref TeamApi
             Path: /team/v1/teams
             Method: POST
 
@@ -58,7 +58,7 @@ Resources:
       CodeUri: ./dist/update-team
       Handler: index.default
       Runtime: nodejs10.x
-      Role: !Ref FociLambdaRoleArn
+      Role: !Ref LambdaRoleArn
       Timeout: 10
       MemorySize: 128
       Tracing: Active
@@ -66,12 +66,12 @@ Resources:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref FociTeamApi
+            RestApiId: !Ref TeamApi
             Path: /team/v1/teams/{teamId}
             Method: PUT    
       Environment:
         Variables:
-          UPDATE_TEAM_TOPIC: !Ref FociUpdateTeamTopic
+          UPDATE_TEAM_TOPIC: !Ref UpdateTeamTopic
 
   ListTeams:
     Type: AWS::Serverless::Function
@@ -80,7 +80,7 @@ Resources:
       CodeUri: ./dist/list-teams
       Handler: index.default
       Runtime: nodejs10.x
-      Role: !Ref FociLambdaRoleArn
+      Role: !Ref LambdaRoleArn
       Timeout: 10
       MemorySize: 128
       Tracing: Active
@@ -88,7 +88,7 @@ Resources:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref FociTeamApi
+            RestApiId: !Ref TeamApi
             Path: /team/v1/teams
             Method: GET                                    
 
@@ -99,7 +99,7 @@ Resources:
       CodeUri: ./dist/get-team
       Handler: index.default
       Runtime: nodejs10.x
-      Role: !Ref FociLambdaRoleArn
+      Role: !Ref LambdaRoleArn
       Timeout: 10
       MemorySize: 128
       Tracing: Active
@@ -107,7 +107,7 @@ Resources:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref FociTeamApi
+            RestApiId: !Ref TeamApi
             Path: /team/v1/teams/{teamId}
             Method: GET  
 
@@ -118,7 +118,7 @@ Resources:
       CodeUri: ./dist/delete-team
       Handler: index.default
       Runtime: nodejs10.x
-      Role: !Ref FociLambdaRoleArn
+      Role: !Ref LambdaRoleArn
       Timeout: 10
       MemorySize: 128
       Tracing: Active
@@ -126,12 +126,12 @@ Resources:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref FociTeamApi
+            RestApiId: !Ref TeamApi
             Path: /team/v1/teams/{teamId}
             Method: DELETE     
       Environment:
         Variables:
-          DELETE_TEAM_TOPIC: !Ref FociDeleteTeamTopic                
+          DELETE_TEAM_TOPIC: !Ref DeleteTeamTopic                
 
   UpdateMatchWithTeam:
     Type: AWS::Serverless::Function
@@ -140,7 +140,7 @@ Resources:
       CodeUri: ./dist/update-match-with-team
       Handler: index.default
       Runtime: nodejs10.x
-      Role: !Ref FociLambdaRoleArn
+      Role: !Ref LambdaRoleArn
       Timeout: 10
       MemorySize: 128
       Tracing: Active
@@ -148,7 +148,7 @@ Resources:
         SNS:
           Type: SNS
           Properties:
-            Topic: !Ref FociUpdateTeamTopic
+            Topic: !Ref UpdateTeamTopic
 
   DeleteMatchWithTeam:
     Type: AWS::Serverless::Function
@@ -157,7 +157,7 @@ Resources:
       CodeUri: ./dist/delete-match-with-team
       Handler: index.default
       Runtime: nodejs10.x
-      Role: !Ref FociLambdaRoleArn
+      Role: !Ref LambdaRoleArn
       Timeout: 10
       MemorySize: 128
       Tracing: Active
@@ -165,9 +165,9 @@ Resources:
         SNS:
           Type: SNS
           Properties:
-            Topic: !Ref FociDeleteTeamTopic    
+            Topic: !Ref DeleteTeamTopic    
 
 Outputs:
-  FociTeamApi:
+  TeamApi:
     Description: "Foci 2020 Team API"
-    Value: !Sub "${FociTeamApi}.execute-api.${AWS::Region}.${AWS::URLSuffix}"
+    Value: !Sub "${TeamApi}.execute-api.${AWS::Region}.${AWS::URLSuffix}"
