--- a/api/tsconfig.webpack.json
+++ b/api/tsconfig.webpack.json
@@ -1,5 +1,8 @@
 {
 	"extends": "./tsconfig",
+	"compilerOptions": {
+		"noUnusedLocals": true
+	},
 	"exclude": [
 		"**/*.spec.ts",
 		"node_modules"
